welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:3: error: not found: value ado
	ado = ado + 1
        ^countTeen:6: error: not found: value ado
	ado = ado + 1
        ^countTeen:8: error: not found: value ado
	ado = ado + 1
        ^countTeen:11: error: not found: value ado
	ado = ado + 1  }
        ^countTeen:12: error: not found: value ado
	return ado }
               ^