welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
if ( a<=19 && a>=13) {
	ado = ado + 1

} else if ( b<=19 && b>=13) {
	ado = ado + 1
}else if ( c<=19 && c>=13) {
	ado = ado + 1
	
}else if ( d<=19 && d>=13) {
	ado = ado + 1  }
	return ado }
